--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "joi": "^17.2.1",
     "joi-password-complexity": "^4.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
+    "randexp": "^0.5.3",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
   }
