--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.896.0",
     "bcrypt": "^5.0.0",
     "chalk": "^3.0.0",
     "compression": "^1.7.4",
@@ -31,6 +32,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "randexp": "^0.5.3",
