--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "aws-sdk": "^2.896.0",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
